--- a/static/css/kezdolap.css
+++ b/static/css/kezdolap.css
@@ -15,6 +15,7 @@
   border-top: 2px solid #021032;
   padding-top: 10px;
   text-transform: capitalize;
+  color: black;
 }
 
 .masodikresz {
@@ -40,6 +41,7 @@
 
 .masodikresz h2 {
   font-size: 40px;
+  color: black;
 }
 
 .test {
@@ -60,7 +62,7 @@
 
 .product .product-card {
   z-index: 1;
-  background: #010d2c;
+  background: #89cff3;
   position: relative;
   width: 300px;
   height: 400px;
@@ -70,7 +72,7 @@
 
 .product .product-card:before {
   content: "";
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.121);
   position: absolute;
   display: block;
   top: 0;
@@ -94,7 +96,7 @@
 
 .product .product-card .name {
   z-index: 2;
-  color: #fff;
+  color: black;
   position: absolute;
   width: 100%;
   text-align: center;
@@ -105,7 +107,7 @@
 
 .product .product-card .price {
   z-index: 2;
-  color: #fff;
+  color: black;
   position: absolute;
   width: 100%;
   text-align: center;
@@ -116,8 +118,8 @@
 
 .product .product-card .popup-btn {
   z-index: 2;
-  color: #021032;
-  background: #fefefe;
+  color: black;
+  background: #CDF5FD;
   position: absolute;
   bottom: 20px;
   left: 50%;
@@ -163,7 +165,7 @@
 
 .product .popup-card .product-img {
   z-index: 2;
-  background: #021032;
+  background: #00A9FF;
   position: relative;
   display: flex;
   justify-content: center;
@@ -185,8 +187,8 @@
 
 .product .popup-card .info {
   z-index: 2;
-  background: #0433ab;
-  color: #fff;
+  background: #CDF5FD;
+  color: black;
   display: flex;
   flex-direction: column;
   width: 75%;
@@ -197,7 +199,7 @@
 }
 
 .product .popup-card .close-btn {
-  color: #fff;
+  color: black;
   z-index: 3;
   position: absolute;
   right: 0;
@@ -207,14 +209,14 @@
 }
 
 .product .popup-card .info h2 {
-  color: #fff;
+  color: black;
   font-size: 40px;
   line-height: 20px;
   margin: 10px;
 }
 
 .product .popup-card .info h2 span {
-  color: #fff;
+  color: black;
   font-size: 15px;
   text-transform: uppercase;
   letter-spacing: 2px;
