--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -8,8 +8,8 @@
 }
 
 :root {
-  --body-color: #e4e9f7;
-  --sidebar-color: #fff;
+  --body-color: #00A9FF;
+  --sidebar-color: #CDF5FD;
   --primary-color: #0079b5;
   --primary-color-light: #00b6e3;
   --toggle-color: #ddd;
