--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -351,3 +351,20 @@ body {
   border-radius: 30px;
   font-size: 1em;
 }
+
+.friend{
+  cursor: pointer;
+}
+
+.send_message{
+  border: none;
+  font-size: 22px;
+}
+.my_msg_x{
+  z-index: 10;
+  margin-right: -1.2vh;
+  font-size: 20px;
+  cursor: pointer;
+  margin-top: -3.5vh;
+  border: none;
+}
