--- a/store/templates/store/checkout.html
+++ b/store/templates/store/checkout.html
@@ -2,10 +2,11 @@
 {% load static %}
 {% load humanize %}
 {% block content %}
+<form id="form">
   <div class="row" id="checkoutContent">
     <div class="col-lg-6">
       <div class="box-element" id="form-wrapper">
-        <form id="form">
+        
           <div id="user-info">
             <p>Személyes adatok</p>
             <hr/>
@@ -46,8 +47,7 @@
             </div>          
           </div>
           <hr/>
-          <input required id="form-button" class="btn btn-success btn-block" type="submit" value="Folytatás" />
-        </form>
+          <input required id="form-button" class="btn btn-success btn-block" type="submit" value="Folytatás" />     
       </div>
 
       <br/>
@@ -55,11 +55,11 @@
         <p id="delivery-options1" style="text-align: center; font-weight: 500;">Szállítási lehetőségek</p>
         <div id="delivery-options2" style="margin: auto;" class="radio-inputs">
           <label class="radio">
-            <input checked type="radio" name="delivery">
+            <input checked type="radio" name="delivery" value="mpl">
             <span class="name">Magyar Posta</span>
           </label>
           <label class="radio">
-            <input type="radio" name="delivery">
+            <input type="radio" name="delivery" value="gls">
             <span class="name">GLS futárszolgálat</span>
           </label>
         </div>
@@ -67,11 +67,11 @@
         <p style="text-align: center; font-weight: 500;">Fizetési lehetőségek</p>
             <div style="margin: auto;" class="radio-inputs">
                 <label class="radio">
-                  <input checked type="radio" name="payment">
+                  <input checked type="radio" name="payment" value="card">
                   <span class="name">Bankkártyás fizetés</span>
                 </label>
                   <label id="delivery-options3" class="radio">
-                    <input type="radio" name="payment">
+                    <input type="radio" name="payment" value="cash">
                     <span class="name">Utánvét</span>
                   </label>   
             </div>
@@ -79,6 +79,7 @@
             <button class="button-33" style="margin: auto; display: flex; background: green;" id="make-payment"><strong>Rendelés leadása</strong></button>
       </div>
     </div>
+  </form>
 
     <div class="col-lg-6">
       <div class="box-element">
@@ -181,18 +182,24 @@
         zipcode: null,
       };
 
+      var orderInfo = {
+        payment: form.payment.value,
+        delivery: null,
+      };
+
       if (shipping != "False") {
         shippingInfo.address = form.address.value + ' ' + form.house_number.value + '.';
         shippingInfo.city = form.city.value;
         shippingInfo.state = form.state.value;
         shippingInfo.zipcode = form.zipcode.value;
+        orderInfo.delivery = form.delivery.value;
       }
 
 
       if (user == "AnonymousUser") {
         userFormData.name = form.lastname.value + " " + form.firstname.value;
         userFormData.email = form.email.value;  
-        userFormData.phonenumber = form.phonenumber.value; 
+        userFormData.phonenumber = form.phonenumber.value;
       }
 
       var url = "/process_order/";
@@ -202,7 +209,7 @@
           "Content-Type": "application/json",
           "X-CSRFToken": csrftoken,
         },
-        body:JSON.stringify({form: userFormData, shipping: shippingInfo}),
+        body:JSON.stringify({form: userFormData, shipping: shippingInfo, order_info: orderInfo}),
       })
         .then((response) => response.json())
         .then((data) => {
