--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -8,10 +8,7 @@
 
   <div style="margin: auto;" class="form-group col-lg-4 col-md-4 col-sm-4 balance">
     <div class="input-group" style="padding-top: 32px;">
-      <input class="form-control py-2 border-right-0 border" type="search" placeholder="Kulcsszó" name="product_name" id="pname">
-      <span class="input-group-append" id="pname-icon">
-        <div class="input-group-text bg-transparent"><i class='bx bx-search-alt-2'></i></div>
-      </span>
+      <input style="border-radius: 20px; margin-left: 10px;" class="form-control py-2 search-box" type="search" placeholder="Kulcsszó" name="product_name" id="pname">
       </div>
       <p style="text-align: center;"><a id="moreFilter" href="#" class="nav-link">Részletes szűrés</a></p>
   </div>
