--- a/store/templates/store/main.html
+++ b/store/templates/store/main.html
@@ -55,14 +55,18 @@
           <ul class="menu-links" id="menu-links">
             <li class="nav-link basic">
               {% if request.user.id is None %}
-              <i class="bx bx-user-x icon"></i>
+              <img style="margin-left: 5px;" src="{% static 'images/placeholder_img.jpg' %}" class="ava">
               <span class="text nav-text"
                 >Köszöntünk<br /><strong>Vendégfelhasználó</strong></span
               >
               {% else %}
-              <i class="bx bx-user-check icon"></i>
-              <span class="text nav-text"
-                >Köszöntünk<br /><strong>{{request.user}}</strong></span
+              {% if request.user.customer.imageURL %}
+              <img style="margin-left: 5px;" src="{{request.user.customer.imageURL}}" class="ava">
+              {% else %}
+              <img style="margin-left: 5px;" src="{% static 'images/placeholder_img.jpg' %}" class="ava">
+              {% endif %} 
+              <span style="margin-left: 25px;" class="text nav-text"
+                >Köszöntünk<br/><strong>{{request.user}}</strong></span
               >
               {% endif %}
             </li>
